# DevStar

./: .devstar.json  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  note.txt  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: ADR.md  ARCHITECTURE.md  CONTRIBUTING.md  ONBOARDING.md  SEED_DATA.md
docs/agents/: AGENTS.md  CLAUDE.md  PROMPTS.md  mcp-config.json  quick-start.md
docs/plans/: mcp-agent-integration.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  mcp_server.rs  rate_limit.rs
src-tauri/src/db/: mod.rs  project_sprints.rs  projects.rs  schema.sql  seed.rs  shared_sections.rs  shared_sprints.rs  template_sprints.rs  templates.rs  tests.rs  types.rs
src-tauri/src/db/seeds/: mod.rs  shared_sections.rs  shared_sprints.rs
src-tauri/src/db/seeds/templates/: api_backend.rs  cloud_infra.rs  data_science_ai.rs  desktop_app.rs  embedded_iot.rs  enterprise_systems.rs  game_dev.rs  mobile_app.rs  mod.rs  security_software.rs  systems_programming.rs  tools_libraries.rs  web_dev.rs
src/components/: SettingsView.tsx
src/components/active/: ActiveMode.tsx
src/components/projects/: ProjectDetailView.tsx  ProjectsView.tsx
src/components/shared/: Checkbox.tsx  CollapsibleSection.tsx  MiniSearchInput.tsx  Modal.tsx  ProgressBar.tsx  SearchInput.tsx  TitleBar.tsx
src/components/templates/: SharedSectionsView.tsx  SharedSprintsView.tsx  (+2 more)
src/lib/: api.ts  types.ts
src/store/: index.ts
