[package]
name = "devstar"
version = "0.1.0"
description = "DevStar — Sprint-based project planning for developers"
authors = ["you"]
edition = "2021"
default-run = "devstar"

[lib]
name = "devstar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "devstar"
path = "src/main.rs"

[[bin]]
name = "devstar-mcp"
path = "src/mcp_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "windef"] }
